--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
 <body>
 
   <!-- 헤더 -->
-  <h1>안녕하세요! 여기는 사랑을 나누는<br>않쉉시 손큰 김꼬꼬닭 요양원입니다~ 🐔💖</h1>
+  <h1>어서오세요! 여기는 사랑을 나누는<br>않쉉시 손큰 김꼬꼬닭 요양원입니다~ 🐔💖</h1>
 
   <!-- 떠다니는 닭 캐릭터 -->
-  <img src="https://i.imgur.com/3G3fXq2.png" class="chicken" style="top:20%; left:5%;">
-  <img src="https://i.imgur.com/3G3fXq2.png" class="chicken" style="top:60%; left:80%;">
+  <img src="https://imgur.com/gallery/chicken-humor-DtHD9Dc#BlQUDNw
+" class="chicken" style="top:20%; left:5%;">
+  <img src="https://imgur.com/gallery/got-molt-fgeH0jt#/t/chicken" class="chicken" style="top:60%; left:80%;">
 
   <!-- 메인 요양원 이미지 (입원 닭 + 요양보호사) -->
   <img src="https://i.imgur.com/J6J3l4y.png" alt="요양원 닭과 보호사" class="main-image">
